# pdf_to_svg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
src/: config.h
src/pdf_to_svg/: __init__.py  _core.cpp
test/: test_convert.py  test_roundtrip.py
tools/: gen_msvc_implib.py
