[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "meson>=1.3", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "pdf_to_svg"
version = "0.1.1"
description = "Convert PDF to SVG in-memory using poppler and cairo"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.packages = ["src/pdf_to_svg"]
cmake.build-type = "Release"
wheel.py-api = "cp312"

[tool.cibuildwheel]
skip = "*-musllinux* *-win32"
build = "cp312-*"

[tool.cibuildwheel.linux]
before-all = "yum install -y epel-release && yum install -y freetype-devel fontconfig-devel libpng-devel pixman-devel zlib-devel meson ninja-build librsvg2-devel glib2-devel"
environment = { LD_LIBRARY_PATH = "/project/_deps_install/lib" }
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install freetype fontconfig libpng pixman pkg-config librsvg"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
repair-wheel-command = "DYLD_LIBRARY_PATH={project}/_deps_install/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = "vcpkg install freetype libpng zlib pixman librsvg --triplet x64-windows"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake" }
